--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -27,6 +27,14 @@ body.header-fixed.header-animated #header.scrolled .logo img {
     height:  2rem !important;
 }
 
+.mobile-menu .button_container .top {
+    background:  white;
+}
+
+.card .card-body p {
+    color:  #ababab;
+}
+
 .image-credit-wrapper {
 overflow: hidden;
 position: relative;
