--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -27,7 +27,9 @@ body.header-fixed.header-animated #header.scrolled .logo img {
     height:  2rem !important;
 }
 
-.mobile-menu .button_container .top {
+.mobile-menu .button_container .top,
+.mobile-menu .button_container .middle
+.mobile-menu .button_container .bottom {
     background:  white;
 }
 
