--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -28,7 +28,7 @@ body.header-fixed.header-animated #header.scrolled .logo img {
 }
 
 .mobile-menu .button_container .top,
-.mobile-menu .button_container .middle
+.mobile-menu .button_container .middle,
 .mobile-menu .button_container .bottom {
     background:  white;
 }
