--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -33,6 +33,10 @@ body.header-fixed.header-animated #header.scrolled .logo img {
     background:  white;
 }
 
+.desktop-menu {
+    display:  none;
+}
+
 .card .card-body p {
     color:  #ababab;
 }
