--- a/themes/quark-open-publishing/templates/partials/base.html.twig
+++ b/themes/quark-open-publishing/templates/partials/base.html.twig
@@ -24,6 +24,11 @@
     {% do assets.addCss('theme://css/theme.css',100) %}
     {% do assets.addCss('theme://css/custom.css') %}
     {% do assets.addCss('theme://css/line-awesome.min.css') %}
+
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block javascripts %}
