--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -3,8 +3,6 @@ body, #header {
     font-family: 'Fira Sans', sans-serif !important;
 }
 
-
-
 .card {
     background: #3F3F46 !important;
     box-shadow:  0 10px 20px 5px rgb(0 0 0 / 30%) !important;
@@ -41,7 +39,16 @@ body.header-fixed.header-animated #header.scrolled .logo img {
 }
 
 h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Fira Sans', sans-serif !important;
     color: #ababab !important;
+}
+
+.hero.text-light h1 {
+    color: white !important;
+}
+
+.hero.text-dark h1 {
+    color: black !important;
 }
 
 /*.card .card-body p {
