--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -38,6 +38,10 @@ body.header-fixed.header-animated #header.scrolled .logo img {
     display:  none;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Fira Sans', sans-serif !important;
+}
+
 #body-wrapper h1,
 #body-wrapper h2,
 #body-wrapper h3, 
@@ -46,7 +50,6 @@ body.header-fixed.header-animated #header.scrolled .logo img {
 #body-wrapper h6,
 #body-wrapper p,
 .card-body p {
-    font-family: 'Fira Sans', sans-serif !important;
     color: #ababab !important;
 }
 
