--- a/themes/quark-open-publishing/templates/partials/layout.html.twig
+++ b/themes/quark-open-publishing/templates/partials/layout.html.twig
@@ -1,5 +1,5 @@
-{% set item_col = 'col-12' %}
-{% set sidebar_col = 'col-12' %}
+{% set item_col = show_sidebar ? 'col-9 col-md-12' : 'col-12' %}
+{% set sidebar_col = show_sidebar ? 'col-3 col-md-12' : 'col-12' %}
 
 {# check content display flag - hibbittsdesign.org #}
 {% if grav.uri.param('chromeless') or grav.uri.param('embedded') or theme_var('chromeless.enabled') %}
@@ -13,6 +13,11 @@
     </div>
     {# check content display flag - hibbittsdesign.org #}
     {% if not (grav.uri.param('chromeless') or grav.uri.param('embedded')) and not(theme_var('chromeless.enabled')) %}
-        
+        {% if show_sidebar %}
+            <div id="sidebar" class="column {{ sidebar_col }}">
+                {% block sidebar %}
+                {% endblock %}
+            </div>
+        {% endif %}
     {% endif %}
 </div>
