--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -45,6 +45,10 @@ body.header-fixed.header-animated #header.scrolled .logo img {
     min-height:  3rem !important;
 }
 
+a {
+    color:  #35b3b8 !important;
+}
+
 #header .navbar-section.desktop-menu {
     display:  none;
 }
