--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -49,6 +49,10 @@ a {
     color:  #35b3b8 !important;
 }
 
+a:visited {
+    color: #ce396d !important;
+}
+
 #header .navbar-section.desktop-menu {
     display:  none;
 }
