--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -57,6 +57,11 @@ a:visited {
     display:  none;
 }
 
+.label.label-secondary {
+    background:  white;
+    font-weight:  bold;
+}
+
 h1, h2, h3, h4, h5, h6, p {
     font-family: 'Fira Sans', sans-serif !important;
 }
