--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -58,8 +58,7 @@ a:visited {
 }
 
 .label.label-secondary {
-    background:  white;
-    font-weight:  bold;
+    background:  white !important;
 }
 
 h1, h2, h3, h4, h5, h6, p {
