--- a/themes/quark/templates/partials/blog/date.html.twig
+++ b/themes/quark/templates/partials/blog/date.html.twig
@@ -1,5 +1,5 @@
 <span class="blog-date">
     <time class="dt-published" datetime="{{ page.date|date("c") }}">
-        <i class="fa fa-calendar"></i> {{ page.date|date('YYYY. mm. DD. HH:mm') }}
+        <i class="fa fa-calendar"></i> {{ page.date|date('Y. m. D. H:M') }}
     </time>
 </span>
