--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -5,7 +5,7 @@
 {% set sidebar_page_content =  sidebar_page.content %}
 
 <div class="sidebar-content">
-    <h4>A Colors of Entryopy-ról</h4>
+    <h4 class="no-margin-top">A Colors of Entropy-ról</h4>
     
     <div class="sidebar-content">
         Csinalunk dolgokat, ez a resz meg ertelemmel fel lesz toltve. Legalabb ha latjuk nap mint nap, akkor ott a motivacio, hogy egyszer valaki ide irjon valami normalis dolgot.
