--- a/themes/quark-open-publishing/css/theme.css
+++ b/themes/quark-open-publishing/css/theme.css
@@ -103,6 +103,7 @@ h1, h2, h3, h4, h5, h6, p {
 #body-wrapper p,
 #body-wrapper ul,
 #body-wrapper ul li,
+.sidebar-content,
 .card-body p {
     color: #ababab !important;
 }
