--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -13,6 +13,27 @@
 </div>
 
 <div class="sidebar-content">
+    <h4 class="no-margin-top">Szerzőkről</h4>
+    
+    <div class="sidebar-content">
+        <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_alex_wut.png" />
+
+        <p>
+        Kiev affirme que « des femmes, des enfants et des personnes âgées » sont toujours dans le complexe métallurgique Azovstal, dernière poche de résistance dans la ville. Des tirs de missiles ont frappé, samedi, la ville d’Odessa.
+        </p>
+    </div>
+
+
+    <div class="sidebar-content">
+        <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_adena1_inactive.png" />
+
+        <p>
+        Kiev affirme que « des femmes, des enfants et des personnes âgées » sont toujours dans le complexe métallurgique Azovstal, dernière poche de résistance dans la ville. Des tirs de missiles ont frappé, samedi, la ville d’Odessa.
+        </p>
+    </div>
+</div>
+
+<div class="sidebar-content">
     <h4>Linkek</h4>
     
     <div class="sidebar-content">
