--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -5,7 +5,7 @@
 {% set sidebar_page_content =  sidebar_page.content %}
 
 <div class="sidebar-content">
-    <h4 class="no-margin-top">A Colors of Entropy-ról</h4>
+    <h4>A Colors of Entropy-ról</h4>
     
     <div class="sidebar-content">
         Csinalunk dolgokat, ez a resz meg ertelemmel fel lesz toltve. Legalabb ha latjuk nap mint nap, akkor ott a motivacio, hogy egyszer valaki ide irjon valami normalis dolgot.
@@ -16,7 +16,9 @@
     <h4 class="no-margin-top">Szerzőkről</h4>
     
     <div class="sidebar-content">
-        <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_alex_wut.png" />
+        <div class="center">
+            <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_alex_wut.png" />
+        </div>
 
         <p>
         Kiev affirme que « des femmes, des enfants et des personnes âgées » sont toujours dans le complexe métallurgique Azovstal, dernière poche de résistance dans la ville. Des tirs de missiles ont frappé, samedi, la ville d’Odessa.
@@ -25,7 +27,9 @@
 
 
     <div class="sidebar-content">
-        <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_adena1_inactive.png" />
+        <div class="center">
+            <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_adena1_inactive.png" />
+        </div>
 
         <p>
         Kiev affirme que « des femmes, des enfants et des personnes âgées » sont toujours dans le complexe métallurgique Azovstal, dernière poche de résistance dans la ville. Des tirs de missiles ont frappé, samedi, la ville d’Odessa.
