--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -32,7 +32,7 @@
         </div>
 
         <p>
-        Kiev affirme que « des femmes, des enfants et des personnes âgées » sont toujours dans le complexe métallurgique Azovstal, dernière poche de résistance dans la ville. Des tirs de missiles ont frappé, samedi, la ville d’Odessa.
+        Adéna Aurora, transz nő, szoftverfejlesztő, "külföldi tudósító", aktivista. Szabadideje is gyakran programozással telik, ha a fekete cicája békén hagyja. 
         </p>
     </div>
 </div>
