--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -32,7 +32,7 @@
         </div>
 
         <p>
-        <a href="http://adena.dev">Adéna Aurora</a>, transz nő, szoftverfejlesztő, "külföldi tudósító", aktivista. Szabadideje is gyakran programozással vagy szövegfordítással telik, ha a fekete cicája békén hagyja. 
+        <a href="http://adena.dev" target="_blank">Adéna Aurora</a>, transz nő, szoftverfejlesztő, "külföldi tudósító", aktivista. Szabadideje is gyakran programozással vagy szövegfordítással telik, ha a fekete cicája békén hagyja. 
         </p>
     </div>
 </div>
