--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -4,8 +4,10 @@
 {% set sidebar_page = pages.find('/sidebar') %}
 {% set sidebar_page_content =  sidebar_page.content %}
 
+<img src="https://traa.adena.dev/user/pages/index/coebanner.png" class="banner" />
+
 <div class="sidebar-content">
-    <h4 class="no-margin-top">A Colors of Entropy-ról</h4>
+    <h4>A Colors of Entropy-ról</h4>
     
     <div class="sidebar-content">
         Csinalunk dolgokat, ez a resz meg ertelemmel fel lesz toltve. Legalabb ha latjuk nap mint nap, akkor ott a motivacio, hogy egyszer valaki ide irjon valami normalis dolgot.
