--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -10,7 +10,7 @@
     <h4 class="no-margin-top">A Colors of Entropy-ról</h4>
     
     <div class="sidebar-content">
-        Csinalunk dolgokat, ez a resz meg ertelemmel fel lesz toltve. Legalabb ha latjuk nap mint nap, akkor ott a motivacio, hogy egyszer valaki ide irjon valami normalis dolgot.
+        Alex / worldless, transz férfi. Szoftvertesztelő, szabadidejében pedig általában a túl sok hobbija és érdeklődése közül van valamelyikbe éppen belebolondulva - a programozástól kezdve a gitározáson át az íráson és olvasáson keresztül a pszichológián áthúzva a videójátékokon túl a rajzolásig, és még sokan mások.
     </div>
 </div>
 
