--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -110,3 +110,12 @@
         </a>
     </div>
 {% endif %}
+
+<div class="sidebar-content">
+    <h4>Támogatás</h4>
+    
+    <div class="sidebar-content">
+        <a href="https://patreon.com/colorsofentropy"><i class="fa fa-patreon"></i>Patreon</a><br />
+        <a href="https://ko-fi.com/colorsofentropy"><i class="fa fa-coffee"></i>Ko-Fi</a><br />
+    </div>
+</div>
