--- a/themes/quark-open-publishing/templates/item.html.twig
+++ b/themes/quark-open-publishing/templates/item.html.twig
@@ -15,7 +15,18 @@
               {% include 'partials/blog/date.html.twig' %}
               {% if config.plugins.readingtime.enabled %}
                 <span class="blogitem__readingtime">{% include 'partials/blog/readingtime.html.twig' %}</span>
-                 - {{ author }}
+                {# POST WRITTEN BY MULTIPLE AUTHORS #}
+                {% if page.taxonomy.author|length > 1 %}
+                    {% for author in page.taxonomy.author %}
+                        <a href="{{base_url}}/author:{{author}}"><span>{{ author }}</span></a>
+                    {% endfor %}
+
+                {# POST WRITTEN BY A SINGLE AUTHOR #}
+                {% else %}
+                    {% for author in page.taxonomy.author %}
+                        <a href="{{base_url}}/author:{{author}}"><span>{{ author }}</span></a>
+                    {% endfor %}
+                {% endif %}
               {% endif %}
             </p>
             {% include 'partials/blog/taxonomy.html.twig' %}
