--- a/themes/quark-open-publishing/templates/item.html.twig
+++ b/themes/quark-open-publishing/templates/item.html.twig
@@ -16,7 +16,7 @@
               {% if config.plugins.readingtime.enabled %}
                 <span class="blogitem__readingtime">{% include 'partials/blog/readingtime.html.twig' %}</span>
               {% endif %}
-                ===    {% if page.taxonomy.author|length > 1 %}
+                ===  {{ page.header.author }} ---  {% if page.taxonomy.author|length > 1 %}
         {% for author in page.taxonomy.author %}
             <a href="{{base_url}}/author:{{author}}"><span>{{ author }}</span></a>
         {% endfor %}
