--- a/themes/quark-open-publishing/templates/item.html.twig
+++ b/themes/quark-open-publishing/templates/item.html.twig
@@ -16,18 +16,17 @@
               {% if config.plugins.readingtime.enabled %}
                 <span class="blogitem__readingtime">{% include 'partials/blog/readingtime.html.twig' %}</span>
               {% endif %}
-                ===  {{ page.header.author }} ---  {% if page.taxonomy.author|length > 1 %}
-        {% for author in page.taxonomy.author %}
-            <a href="{{base_url}}/author:{{author}}"><span>{{ author }}</span></a>
-        {% endfor %}
+              {% if page.taxonomy.author|length > 1 %}
+                {% for author in page.taxonomy.author %}
+                    <span class="author-box">{{ author }}</span>
+                {% endfor %}
 
-    {# POST WRITTEN BY A SINGLE AUTHOR #}
-    {% else %}
-        {% for author in page.taxonomy.author %}
-            <a href="{{base_url}}/author:{{author}}"><span>{{ author }}</span></a>
-        {% endfor %}
-    {% endif %}
-                
+              {# POST WRITTEN BY A SINGLE AUTHOR #}
+              {% else %}
+                {% for author in page.taxonomy.author %}
+                    <span class="author-box">{{ author }}</span>
+                {% endfor %}
+              {% endif %}
             </p>
             {% include 'partials/blog/taxonomy.html.twig' %}
         {% endset %}
