--- a/themes/quark-open-publishing/templates/item.html.twig
+++ b/themes/quark-open-publishing/templates/item.html.twig
@@ -16,14 +16,14 @@
               {% if config.plugins.readingtime.enabled %}
                 <span class="blogitem__readingtime">{% include 'partials/blog/readingtime.html.twig' %}</span>
               {% endif %}
-              {% if page.taxonomy.author|length > 1 %}
-                {% for author in page.taxonomy.author %}
+              {% if page.taxonomy.category|length > 1 %}
+                {% for author in page.taxonomy.category %}
                     - <span class="author-box">{{ author }}</span>
                 {% endfor %}
 
               {# POST WRITTEN BY A SINGLE AUTHOR #}
               {% else %}
-                {% for author in page.taxonomy.author %}
+                {% for author in page.taxonomy.category %}
                     - <span class="author-box">{{ author }}</span>
                 {% endfor %}
               {% endif %}
