--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -5,14 +5,14 @@
 {% set sidebar_page_content =  sidebar_page.content %}
 
 <img src="https://traa.adena.dev/user/pages/index/coebanner.png" class="banner" />
-
+{% /*
 <div class="sidebar-content">
     <h4 class="no-margin-top">A Colors of Entropy-ról</h4>
     
     <div class="sidebar-content">
         Csinalunk dolgokat, ez a resz meg ertelemmel fel lesz toltve. Legalabb ha latjuk nap mint nap, akkor ott a motivacio, hogy egyszer valaki ide irjon valami normalis dolgot.
     </div>
-</div>
+</div> */ %}
 
 <div class="sidebar-content">
     <h4>Szerzőkről</h4>
