--- a/themes/quark-open-publishing/templates/partials/sidebar.html.twig
+++ b/themes/quark-open-publishing/templates/partials/sidebar.html.twig
@@ -17,7 +17,7 @@
 <div class="sidebar-content">
     <h4>Szerzőkről</h4>
     
-    <div class="sidebar-content">
+    <div class="sidebar-content no-margin-top">
         <div class="center">
             <img class="one-of-us" src="https://traa.adena.dev/user/pages/index/character_icons_alex_200px.png" />
         </div>
